# rust_lang_cn

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  config-sample.toml  gulpfile.js  log4rs-sample.yaml  log4rs.yaml  package.json  rustfmt.toml  tables.sql
src/: base.rs  main.rs  route.rs
src/base/: config.rs  constant.rs  db.rs  framework.rs  macros.rs  mod.rs  model.rs  util.rs  validator.rs
src/handlers/: article.rs  comment.rs  home.rs  mod.rs  user.rs
src/sass/: _bootstrap.scss  base.scss  index.scss
static/css/: base.css  base.css.map  index.css.map
static/highlight/js/: highlight.pack.js
static_src/: index.less
templates/: ads.hbs  base.hbs  friends.hbs  hacker_news.hbs  index.hbs  index.html  new_article_btn.hbs  stat.hbs
templates/article/: edit_load.hbs  new_load.hbs  show.hbs
templates/user/: bind_load.hbs  login_load.hbs  register_load.hbs  show.hbs
tools/: hacker_news.py  requirements.txt
tools/templates/: hacker_news.html
