[package]
name = "rust_lang_cn"
version = "0.1.0"
authors = ["liyuan <liyuan462@gmail.com>"]

[dependencies]
hyper = "*"
iron = "*"
router = "*"
handlebars-iron = "*"
rustc-serialize = "*"
toml = "*"
persistent = "*"
urlencoded = "*"
traitobject = "*"
mime = "*"
mysql = "*"
rust-crypto = "*"
rand = "*"
chrono = "*"
iron-login = "*"
log = "*"
log4rs = { version="*", features = ["yaml"] }
lazy_static = "*"
pulldown-cmark = "*"
regex = "*"
ammonia = "*"
rss = "*"