[package]
name = "rust_lang_cn"
version = "1.0.1"
authors = ["liyuan <liyuan462@gmail.com>"]

[dependencies]
hyper = "*"
iron = "*"
router = "*"
mount = "0.1.0"
staticfile = "*"
handlebars-iron = "*"
rustc-serialize = "*"
toml = "*"
persistent = "*"
urlencoded = "*"
traitobject = "*"
mime = "*"
mysql = "*"
rust-crypto = "*"
rand = "*"
time = "*"
chrono = "*"
iron-login = "*"
log = "*"
log4rs = { version="*", features = ["yaml"] }
lazy_static = "*"
pulldown-cmark = "*"
regex = "*"
ammonia = "*"
rss = "*"
cookie = "*"
oven = "*"
url = "*"
