[package]
name = "rust_lang_cn"
version = "1.1.0"
authors = ["liyuan <liyuan462@gmail.com>"]

[dependencies]
hyper = "0.9"
iron = "0.4"
router = "0.2"
mount = "0.2"
staticfile = "0.3"
handlebars-iron = "0.18"
rustc-serialize = "0.3"
toml = "0.2"
persistent = "0.2"
urlencoded = "0.4"
traitobject = "0.0.3"
mime = "0.2"
rust-crypto = "0.2"
rand = "0.3"
time = "0.1"
chrono = "0.2"
iron-login = "0.5"
log = "0.3"
log4rs = { version="0.4", features = ["yaml"] }
lazy_static = "0.2"
pulldown-cmark = "0.0.8"
regex = "0.1"
ammonia = "0.1"
rss = "0.3"
cookie = "0.2"
oven = "0.4"
url = "1.2"
form-checker = "0.2"

[dependencies.mysql]
version = "7.0"
default-features = false
features = ["ssl"]
